--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,26 +1,47 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+<div class="search-div">
+  <h1>Ckemi
+    <button id="addButton" mat-icon-button (click)="onAdd()" color="primary"><mat-icon>add</mat-icon>
+      Add Something
+    </button>
+  </h1>
+</div>
+<table mat-table [dataSource]="tableData" class="mat-elevation-z8 demo-table">
   <!-- Position Column -->
-  <ng-container matColumnDef="demo-position">
+  <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="demo-name">
+  <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="demo-weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <ng-container matColumnDef="lastname">
+    <th mat-header-cell *matHeaderCellDef> Lastname </th>
+    <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="demo-symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <ng-container matColumnDef="age">
+    <th mat-header-cell *matHeaderCellDef> Age </th>
+    <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+  </ng-container><br>
+  <!--Action column-->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button>
+        <mat-icon mat-fab color="primary" class="edit" aria-label="edit icon" (click)="updateTable(element)">edit</mat-icon>
+      </button>
+
+      <button mat-icon-button>
+        <mat-icon mat-fab color="warn" class="delete" aria-label="delete icon" (click)="deleteTable(element.id)">delete</mat-icon>
+
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
