--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,7 +1,7 @@
 <div class="search-div">
-  <h1>Ckemi
+  <h1>Register
     <button id="addButton" mat-icon-button (click)="onAdd()" color="primary"><mat-icon>add</mat-icon>
-      Add Something
+      Add
     </button>
   </h1>
 </div>
