--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -6,3 +6,58 @@ h1{
   width: 90%;
   margin: 50px 0px 20px 50px;
 }
+
+/*FOOTER*/
+.footer{
+  background-color: #090a0a;
+  width:100%;
+  display:flex;
+  padding:5rem 0;
+}
+
+.footer section{
+  padding:1rem 2rem;
+  width:100%;
+  vertical-align:top;
+}
+
+.footer section h3{
+  color:white;
+}
+
+.footer section a{
+  color:white;
+  display:flex;
+  align-items:center;
+  white-space:nowrap;
+  margin:15px 0;
+}
+
+.footer section a:hover{
+  color:white;
+}
+
+.footer section:nth-child(2) a:before,.footer section:nth-child(3) a:before{
+  content:"";
+  font-family:"FontAwesome";
+  margin-right:5px;
+  color:white;
+}
+
+.footer section a span{
+  margin:0 10px;
+}
+
+
+@media (max-width:1020px){
+  .footer{
+    display:block;
+  }
+  .footer section{
+    padding:1rem 1rem;
+  }
+  .footer section:nth-child(2), .footer section:nth-child(3){
+    width:49%;
+    display:inline-block;
+  }
+}
