--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,6 +2,35 @@
 <div class="container">
   <img class="homeimg" src="https://i.gifer.com/Bt2p.gif" style="width:100%">
   <!-- Footer -->
+<app-about></app-about>
+  <!--FOOTER-->
+  <footer>
+    <div class="footer">
+      <section>
+        <h3>Website</h3>
+        <p style="color: white">Check the coolest thing</p>
+      </section>
+      <section>
+        <h3>LINKS</h3>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact Us</a>
+      </section>
+      <section>
+        <h3>OTHER</h3>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Cookie Policy</a>
+      </section>
+      <section>
+        <h3>ANY QUESTIONS?</h3>
+        <a href="emailto:antoneta.rustemi@gmail.com"><span><i class="fa fa-envelope"></i></span><span>antoneta.rustemi@gmail.com</span></a>
+        <a href="tel:+3556872365"><span><i class="fa fa-phone"></i></span><span>+3556872365</span></a>
+      </section>
+    </div>
+  </footer>
+
   <footer class="page-footer font-small blue">
 
     <!-- Copyright -->
