--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,46 +1,30 @@
-<!--<div class="login-container">-->
-<!--  <div class="login-content">-->
-<!--    <mat-card>-->
-<!--      <form [formGroup]="loginForm"  (ngSubmit)="onSubmit()">-->
-<!--        <mat-form-field>-->
-<!--          <mat-icon matPrefix>person_outline</mat-icon>-->
-<!--          <input autofocus type="text" matInput placeholder="Username" formControlName="username">-->
-<!--        </mat-form-field>-->
 
-<!--        <mat-form-field>-->
-<!--          <mat-icon matPrefix>lock_outline</mat-icon>-->
-<!--          <input type="password" autocomplete="false" matInput placeholder="Password" formControlName="password">-->
-<!--        </mat-form-field>-->
-<!--        <mat-label>Username</mat-label><br>-->
-<!--        <mat-form-field class="mat-form-field-fluid">-->
-<!--          <input matInput  class="control" formControlName="username" name="username" placeholder="username" >-->
-<!--        </mat-form-field>-->
-<!--        <br><br>-->
-<!--        <mat-label>Password</mat-label><br>-->
-<!--        <mat-form-field class="mat-form-field-fluid">-->
-<!--          <input matInput type="text"  class="control" formControlName="password"  name="password" placeholder="password">-->
-<!--        </mat-form-field>-->
-
-<!--        <button type="submit" mat-raised-button color="primary">Login</button>-->
-<!--      </form>-->
-<!--    </mat-card>-->
-<!--  </div>-->
-<!--</div>-->
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <mat-form-field class="mat-form-field-fluid">
-  <input matInput type = "text" name = "fullName" placeholder = "Your full name" formControlName="fullName" >
-  </mat-form-field>
-  <br/>
-  <mat-form-field class="mat-form-field-fluid">
-    <input matInput type = "email" name = "email" placeholder = "Your email" formControlName="email" >
-  </mat-form-field>
-    <br/>
-  <mat-form-field class="mat-form-field-fluid">
-  <textarea matInput name = "message" placeholder = "Your message" formControlName="message" ></textarea>
-  </mat-form-field>
-    <br/>
-  <button id="btn1" mat-raised-button color="primary" value="Send" type="submit">Login</button>
-<!--  <input type = "submit" value = "Send">-->
-</form>
-
-
+<body>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center" style="padding-top: 20px;">
+      <div class="container box" style="margin-top: 10px; padding-left: 0px; padding-right: 0px;">
+        <div class="row">
+          <div class="col-12" style="text-align: center;">
+            <form [formGroup]="formData" (ngSubmit)="onClickSubmit(formData.value)"
+                  class="form-signin">
+              <h2 class="form-signin-heading">Please  Login</h2>
+              <label for="username" class="sr-only" >Username</label>
+              <mat-form-field class="mat-form-field-fluid">
+              <input matInput type="text" id="username" class="form-control"
+                     formControlName="userName" placeholder="Username" required autofocus>
+              </mat-form-field>
+              <label for="inputPassword" class="sr-only" >Password</label>
+              <mat-form-field class="mat-form-field-fluid">
+              <input matInput type="password" id="inputPassword" class="form-control"
+                     formControlName="password" placeholder="Password" required>
+              </mat-form-field>
+              <button mat-button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
