--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,7 +3,7 @@
 }
 
 mat-toolbar {
-  background: #3F51B5;
+  background: #090a0a;
   color: white;
 }
 
@@ -29,7 +29,7 @@ mat-sidenav {
   margin: 10px;
   width: 200px;
   border-right: none;
-  background: #3F51B5;
+  background: #090a0a;
   color: white;
   border-radius: 10px;
   padding: 16px;
@@ -44,7 +44,4 @@ h1 a {
   text-decoration: none;
 
 }
-login{
-  text-align: right;
-  margin-right: 2000px;
-}
+
